blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/Search__c.object-meta.xml
<CustomObject>
    <description>One retained mandate to fill one senior role: the position, fee terms, timetable and team. Created when a mandate deal is won, and has its own delivery pipeline.</description>
    <label>Search</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>