blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows every search a client has retained us for.</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Searches</relationshipLabel>
    <relationshipName>Searches</relationshipName>
    <type>Lookup</type>
</CustomField>