blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/fields/Close_reason__c.field-meta.xml
<CustomField>
    <fullName>Close_reason__c</fullName>
    <description>Why the search ended without a placement. Required on the closed stage.</description>
    <label>Close reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client filled internally</fullName>
            </value>
            <value>
                <fullName>Role cancelled</fullName>
            </value>
            <value>
                <fullName>Client paused indefinitely</fullName>
            </value>
            <value>
                <fullName>We withdrew</fullName>
            </value>
            <value>
                <fullName>Candidate pool exhausted</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>