blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/fields/Confidential__c.field-meta.xml
<CustomField>
    <fullName>Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The incumbent or market must not know. Restricts record access and sets approach rules.</description>
    <label>Confidential</label>
    <type>Checkbox</type>
</CustomField>