blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The consultant who runs the search day to day.</description>
    <label>Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Searches Consultant</relationshipLabel>
    <relationshipName>Search_Consultant</relationshipName>
    <type>Lookup</type>
</CustomField>