blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/fields/Engaged_date__c.field-meta.xml
<CustomField>
    <fullName>Engaged_date__c</fullName>
    <description>The date the mandate was signed. The timetable runs from here.</description>
    <label>Engaged date</label>
    <type>Date</type>
</CustomField>