blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/fields/Expected_total_compensation__c.field-meta.xml
<CustomField>
    <fullName>Expected_total_compensation__c</fullName>
    <description>The role's expected first-year total pay, from the signed mandate.</description>
    <label>Expected total compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>