blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/fields/Longlist_size__c.field-meta.xml
<CustomField>
    <fullName>Longlist_size__c</fullName>
    <description>Number of people agreed on the longlist. Used to see how much mapping each search needs.</description>
    <label>Longlist size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>