blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/fields/Mandate_deal__c.field-meta.xml
<CustomField>
    <fullName>Mandate_deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ties each search to the deal that won it.</description>
    <label>Mandate deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Searches</relationshipLabel>
    <relationshipName>Searches</relationshipName>
    <type>Lookup</type>
</CustomField>