blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The partner accountable for the search and the client relationship.</description>
    <label>Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Searches Partner</relationshipLabel>
    <relationshipName>Search_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>