blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/fields/Role_title__c.field-meta.xml
<CustomField>
    <fullName>Role_title__c</fullName>
    <description>The senior role being filled. Kept off confidential searches' visible names.</description>
    <label>Role title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>