blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/fields/Seniority__c.field-meta.xml
<CustomField>
    <fullName>Seniority__c</fullName>
    <description>The level of the role. Used to report by level.</description>
    <label>Seniority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board or chair</fullName>
            </value>
            <value>
                <fullName>C-suite</fullName>
            </value>
            <value>
                <fullName>VP or director</fullName>
            </value>
            <value>
                <fullName>Head of function</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>