blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Where the record is in its pipeline. Restricted to the pipeline's stages.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Position specification</fullName>
            </value>
            <value>
                <fullName>Market mapping</fullName>
            </value>
            <value>
                <fullName>Longlist</fullName>
            </value>
            <value>
                <fullName>Shortlist</fullName>
            </value>
            <value>
                <fullName>Client interviews</fullName>
            </value>
            <value>
                <fullName>Offer and references</fullName>
            </value>
            <value>
                <fullName>Placed</fullName>
            </value>
            <value>
                <fullName>Closed without placement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>