blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/fields/Target_placement_date__c.field-meta.xml
<CustomField>
    <fullName>Target_placement_date__c</fullName>
    <description>The date the client wants the new executive to start.</description>
    <label>Target placement date</label>
    <type>Date</type>
</CustomField>