blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/fields/Target_shortlist_date__c.field-meta.xml
<CustomField>
    <fullName>Target_shortlist_date__c</fullName>
    <description>The date the mandate promises a shortlist to the client.</description>
    <label>Target shortlist date</label>
    <type>Date</type>
</CustomField>