blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/fields/Total_fee__c.field-meta.xml
<CustomField>
    <fullName>Total_fee__c</fullName>
    <description>Total retained fee agreed in the mandate, excluding expenses.</description>
    <label>Total fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>