blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/validationRules/Gate_search_delivery_client_interviews.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_search_delivery_client_interviews</fullName>
    <active>true</active>
    <description>Stage gate: Search delivery, Client interviews and later stages need Target placement date.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Position specification", 1, "Market mapping", 2, "Longlist", 3, "Shortlist", 4, "Client interviews", 5, "Offer and references", 6, "Placed", 7, 0) &gt;= 5, ISBLANK(Target_placement_date__c))</errorConditionFormula>
    <errorDisplayField>Target_placement_date__c</errorDisplayField>
    <errorMessage>Fill in Target placement date before moving to Client interviews.</errorMessage>
</ValidationRule>