blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/validationRules/Gate_search_delivery_longlist.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_search_delivery_longlist</fullName>
    <active>true</active>
    <description>Stage gate: Search delivery, Longlist and later stages need Longlist size.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Position specification", 1, "Market mapping", 2, "Longlist", 3, "Shortlist", 4, "Client interviews", 5, "Offer and references", 6, "Placed", 7, 0) &gt;= 3, ISBLANK(Longlist_size__c))</errorConditionFormula>
    <errorDisplayField>Longlist_size__c</errorDisplayField>
    <errorMessage>Fill in Longlist size before moving to Longlist.</errorMessage>
</ValidationRule>