blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/validationRules/Gate_search_delivery_offer_and_re_90f60c.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_search_delivery_offer_and_re_90f60c</fullName>
    <active>true</active>
    <description>Stage gate: Search delivery, Offer and references and later stages need Total fee.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Position specification", 1, "Market mapping", 2, "Longlist", 3, "Shortlist", 4, "Client interviews", 5, "Offer and references", 6, "Placed", 7, 0) &gt;= 6, ISBLANK(Total_fee__c))</errorConditionFormula>
    <errorDisplayField>Total_fee__c</errorDisplayField>
    <errorMessage>Fill in Total fee before moving to Offer and references.</errorMessage>
</ValidationRule>