blueprints/executive-search/salesforce/force-app/main/default/objects/Search__c/listViews/Active_searches.listView-meta.xml
<ListView>
    <fullName>Active_searches</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Target_shortlist_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Position specification,Market mapping,Longlist,Shortlist,Client interviews,Offer and references</value>
    </filters>
    <label>Active searches</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>